fix: update yarn.lock file

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "storybook": "storybook dev -p 6006 --no-open",
+    "dev:docs": "storybook dev -p 6006 --no-open",
     "build-storybook": "storybook build"
   },
   "dependencies": {
@@ -25,9 +25,6 @@
     "@storybook/nextjs": "^8.0.2",
     "@storybook/react": "^8.0.2",
     "@storybook/test": "^8.0.2",
-    "@types/node": "20.11.30",
-    "@types/react": "18.2.67",
-    "storybook": "^8.0.2",
-    "typescript": "5.4.3"
+    "storybook": "^8.0.2"
   }
 }
