--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.34",
     "next": "^14.1.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.2.25",
@@ -25,6 +27,7 @@
     "@storybook/nextjs": "^8.0.2",
     "@storybook/react": "^8.0.2",
     "@storybook/test": "^8.0.2",
-    "storybook": "^8.0.2"
+    "storybook": "^8.0.2",
+    "typescript": "5.4.3"
   }
 }
