--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@storybook/addon-interactions": "^8.0.2",
     "@storybook/addon-links": "^8.0.2",
     "@storybook/addon-onboarding": "^8.0.2",
+    "@storybook/addons": "^7.6.17",
     "@storybook/blocks": "^8.0.2",
     "@storybook/nextjs": "^8.0.2",
     "@storybook/react": "^8.0.2",
     "@storybook/test": "^8.0.2",
+    "@storybook/theming": "^8.0.5",
     "storybook": "^8.0.2",
     "typescript": "5.4.3"
   }
