--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "addon-screen-reader": "^1.8.6",
     "next": "^14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
